# SandboxPlatformer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_assets.py
engine/: CMakeLists.txt  generate_embedded.py
engine/Components/IceCore/: CMakeLists.txt
engine/Components/IceCore/include/IceSDK/: Core.hh
engine/Components/IceCore/include/IceSDK/Core/: Engine.hh  IBaseApp.hh
engine/Components/IceCore/src/: Engine.cc
engine/Components/IceECS/: CMakeLists.txt
engine/Components/IceECS/include/IceSDK/: ECS.hh
engine/Components/IceECS/include/IceSDK/ECS/: Entity.hh  Scene.hh
engine/Components/IceECS/include/IceSDK/ECS/Components/: TransformComponent.hh
engine/Components/IceECS/src/: Scene.cc
engine/Components/IceECS/src/Systems/: TransformSystem.cc  TransformSystem.hh
engine/Components/IceRenderer/: CMakeLists.txt
engine/Components/IceRenderer/include/IceSDK/: LogicalDevice.hh  Renderer.hh
engine/Components/IceRenderer/src/: Renderer.cc
engine/Components/IceSurface/: CMakeLists.txt
engine/Components/IceSurface/include/IceSDK/: Surface.hh
engine/Components/IceSurface/include/IceSDK/Surface/: Desc.hh  Events.hh  Exception.hh  ISurface.hh  KeyTable.hh
engine/Components/IceSurface/src/: Surface.cc
engine/Components/IceSurface/src/Platform/Linux/: X11Surface.cc  X11Surface.hh
engine/Components/IceSurface/src/Platform/Win32/: Win32Surface.cc  Win32Surface.hh
engine/Components/IceUtils/: CMakeLists.txt
engine/Components/IceUtils/include/IceSDK/: Utils.hh
engine/Components/IceUtils/include/IceSDK/Utils/: FPSLimiter.hh  Identifier.hh  Logger.hh  Math.hh  Memory.hh  Timer.hh
engine/Components/IceUtils/src/: dummy.cc
engine/src/: Engine.cc  Engine.hh  Platform.hh  pch.hh
engine/src/Audio/: Audio.cc  Audio.hh  AudioChannel.cc  AudioChannel.hh  AudioSystem.cc  AudioSystem.hh  README
engine/src/Audio/Loaders/: AudioLoader.cc  AudioLoader.hh  WavAudioLoader.cc  WavAudioLoader.hh
engine/src/Core/: Engine.cc  Engine.hh
engine/src/Core/Audio/: Audio.cc  Audio.hh  AudioChannel.cc  AudioChannel.hh  AudioSystem.cc  AudioSystem.hh  Helper.hh
engine/src/Core/Audio/Loaders/: AudioLoader.cc  AudioLoader.hh  WavAudioLoader.cc  WavAudioLoader.hh
engine/src/Core/Debug/: DefaultLayout.hh  GUIInspector.cc  GUIInspector.hh  GameView.cc  GameView.hh  IDebugUtil.hh  IResourceMonitor.cc  IResourceMonitor.hh  Profiler.cc  Profiler.hh
engine/src/Core/Debug/imgui/: SurfaceImGui.cc  SurfaceImGui.hh
engine/src/Core/GUI/: GUI.hh  GUIComponent.cc  GUIComponent.hh
engine/src/Core/GUI/Components/: Box.cc  Box.hh  Text.cc  Text.hh
engine/src/Core/Graphics/: Camera2D.cc  Camera2D.hh  Font.cc  Font.hh  Texture2D.cc  Texture2D.hh  VertexBatcher.cc  VertexBatcher.hh  Window.cc  Window.hh
engine/src/Core/Graphics/Font/: Font.cc  Font.hh  Label.cc  Label.hh
engine/src/Core/Graphics/Surface/: PlatformSurface.hh  Surface.cc  Surface.hh
engine/src/Core/Graphics/Surface/Platform/Linux/: X11Surface.cc  X11Surface.hh  xkb_unicode.cc  xkb_unicode.h
engine/src/Core/Graphics/Surface/Platform/Win32/: Win32Surface.cc  Win32Surface.hh
engine/src/Core/Graphics/tempsh/: fs_default.d3d11.h  fs_default.d3d12.h  fs_default.d3d9.h  fs_default.glsl.h  fs_default.metal.h  fs_default.vulkan.h  vs_default.d3d11.h  vs_default.d3d12.h  vs_default.d3d9.h  vs_default.glsl.h  vs_default.metal.h  vs_default.vulkan.h
engine/src/Core/Managers/: FontManager.hh  IResourceManager.hh  InputHelper.hh  InputManager.cc  InputManager.hh  ShaderManager.cc  ShaderManager.hh  TextureManager.cc  TextureManager.hh
engine/src/Core/Utils/: Easing.hh  EnumFlags.hh  FileSystem.hh  Identifier.hh  Limiter.hh  Logger.cc  Logger.hh  Math.hh  Memory.hh  String.hh  Timer.hh  Tweener.hh  XorStr.hh
engine/src/Debug/: DebugUtil.hh
engine/src/ECS/: Entity.cc  Entity.hh  ISystem.hh  Scene.cc  Scene.hh
engine/src/ECS/Components/: BaseComponent.hh  TransformComponent.hh
engine/src/ECS/Systems/: TransformSystem.cc  TransformSystem.hh
engine/src/Network/: NetClient.hh  Network.cc  Network.hh  Packet.hh
game/: CMakeLists.txt
game/resources/: items.txt
game/src/: main.cc
game/src/Game/: Game.cc  Game.hh
game/src/Game/Avatar/: Avatar.hh
game/src/Game/Debug/: NetworkInspector.cc  NetworkInspector.hh
game/src/Game/Managers/: ItemInfoManager.cc  ItemInfoManager.hh
game/src/Game/Network/: BaseClient.hh  BaseNetwork.cc  BaseNetwork.hh  BaseServer.hh  NetClient.hh  NetListener.hh  Network.cc  Network.hh  Packet.hh
game/src/Game/Network/Packets/: AvatarPacket.hh  AvatarStatePacket.hh  ItemDBPacket.hh  LoginPacket.hh  WorldPacket.hh
game/src/Game/Player/: Avatar.cc  Avatar.hh  Player.cc  Player.hh
game/src/Game/World/: Tile.cc  Tile.hh  World.cc  World.hh  WorldRenderer.cc  WorldRenderer.hh
game/src/Server/: Ascii.h  Server.cc  Server.hh
game/src/Server/SPlayer/: SPlayer.cc  SPlayer.hh
game/src/World/: Tile.hh  World.cc  World.hh  WorldRenderer.hh
tools/: CMakeLists.txt
tools/ASCP/: CMakeLists.txt
tools/ASCP/metadata/: audio.json5  font.json5  texture.json5
tools/ASCP/src/: main.cc
tools/ASCP/src/parser/: audio.cc  audio.hh  file.cc  file.hh  image.cc  image.hh  parser.hh
tools/ASCP/src/utils/: compress.cc  compress.hh
